@@ -1,3 +1,11 @@
+2023-09-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-methods): Adapt docstring.
+	(tramp-handle-make-process): Replace ?a by "-t" if indicated.
+
+	* tramp-sshfs.el (tramp-methods): Use "%a".
+	(tramp-sshfs-handle-process-file): Replace ?a by "-t".
+
 2023-09-21  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-skeleton-write-region): Fix missing comma.
